# WebAssembly

./: .gitignore  README.md  index.html  pyserve.py
100/: Makefile  README.md
100/static/: test.wasm
100/web/: main.go
101hello/: Makefile  README.md  main.go
102hello-rs/: Cargo.toml  README.md
102hello-rs/src/: lib.rs
102hello-rs/static/: index.html
103tinygo/: Makefile  README.md  main.go
103tinygo/static/: index.html
104factorial/: README.md  main.go
104factorial/static/: index.html
105factorial/: README.md  main.go
105factorial/static/: index.html
106bigfact/: README.md  main.go
106bigfact/static/: index.html
107factorial-rs/: Cargo.toml  README.md
107factorial-rs/src/: lib.rs
107factorial-rs/static/: index.html
108wasi-rs/: Cargo.toml  README.md
108wasi-rs/static/: index.html
109canvas-rs/: Cargo.toml  README.md
109canvas-rs/src/: lib.rs
109canvas-rs/static/: index.html
109canvas-rs/static/js/: main.js  main.wasm
110css/: README.md  main.go
110css/static/: index.html
111inline/: README.md  main.go
111inline/static/: index.html
112primes/: README.md  main.go
112primes/static/: index.html
113timing/: README.md  main.go
113timing/c/: main.c
113timing/js/: main.js
113timing/one-core/: main.go
113timing/static/: index.html
114calc/: README.md  main.go
114calc/static/: index.html
115zipwasm/: README.md  main.go
115zipwasm/static/: index.html
116Life-cs/: Life.sln
116Life-cs/Life/: Form1.Designer.cs  Form1.cs  Life.csproj  packages.config
117life-js/: README.md
117life-js/static/: index.html
118life/: README.md  main.go
118life/static/: index.html
119call/: Makefile  README.md  main.go
119call/static/: index.html
121binary-rs/: Cargo.toml  README.md
121binary-rs/src/: lib.rs
121binary-rs/static/: index.html
122sha1/: Cargo.toml  README.md
122sha1/src/: lib.rs
122sha1/static/: index.html
123stdweb-rs-js/: Cargo.toml  README.md
123stdweb-rs-js/src/: main.rs
123stdweb-rs-js/static/: index.html  stdweb-rs-js.js  stdweb-rs-js.wasm
124voltage-divider/: Cargo.toml  README.md
125voltage-divider-c/: README.md  main.c
126wasi-hello/: Cargo.toml  README.md
127wasi-sys/: Cargo.toml  README.md
127wasi-sys/src/: main.rs
127wasi-sys/static/js/: main.wasm
128morse/: .gitignore  Cargo.toml  README.md
129bindgen/: Cargo.toml  README.md
129bindgen/src/: lib.rs
129bindgen/static/: index.html
129bindgen/static/js/: bindgen.js  main.js  main.wasm
130rand/: Cargo.toml  README.md
132common-factors-probability-timing/: Cargo.toml  README.md
133pi/: Cargo.toml  README.md
134insertion-sort/: Cargo.toml  README.md
135wasm-js/: README.md
136common-factors-probability/: Cargo.toml
137tinygo/: Makefile  main.go
138tinygo/: Makefile  main.go
139tinygo/: main.go
140tinygo/: README.md  main.go
css/: main.css
ginserve/: main.go
goserve/: Makefile  README.md  favary.go  favicon.go  go.mod  go.sum  main.go
js/: main.js
rsserve/: Cargo.toml  README.md
rsserve/src/: main.rs
stdin2go/: README.md  main.go
wasm2zip/: Cargo.toml  README.md
zip2wasm/: Cargo.toml  README.md
zip2wasm/src/: lib.rs
zip2wasm/static/: index.html
zip2wasm/static/js/: zip2wasm.js  zip2wasm.wasm
(+97 files in other folders)
