[package]
name = "wasi-sys"
version = "0.1.0"
authors = ["@wasmup"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
# codegen-units = 1 #Set this to 1 to allow for maximum size reduction optimizations:
# panic = 'abort' #  removes the need for this extra unwinding code.

[dependencies]
