[package]
name = "rs102hello"
version = "0.1.0"
authors = ["wasmup authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
# codegen-units = 1 #Set this to 1 to allow for maximum size reduction optimizations:
# panic = 'abort' #  removes the need for this extra unwinding code.

[dependencies]
wasm-bindgen = "0.2.58" # Easy support for interacting between JS and Rust.
num-bigint   = "0.2.5"  # Big integer implementation for Rust
num-traits   = "0.2.11" # Numeric traits for generic mathematics
num = "0.2.1" # A collection of numeric types and traits for Rust, including bigint, complex, rational, ran…
